[tool.poetry]
name = "galen"
version = "1.0.0"
description = "GALEN Advanced Library for ElasticSearch Navigation"
authors = ["Elisiário Couto <elisiario@couto.io>"]
readme = "README.md"
packages = [{ include = "galen" }]
license = "Apache-2.0"
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
]

[tool.poetry.scripts]
galen = "galen.main:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
click = "^8.1.3"
appdirs = "^1.4.4"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
